# openrtb3_0

./: Cargo.toml  Makefile  README.md  create_adcom_list.sh  create_adcom_obj.sh
src/: adcom.rs  controllers.rs  macros.rs  main.rs  models.rs  openrtb3.rs  rtb_type_macros.rs  rtb_type_strict_macros.rs
src/adcom/: agent_type.rs  amphtml_rendering_type.rs  api_framework.rs  app.rs  asset.rs  asset_format.rs  audio.rs  audio_placement.rs  audio_status_code.rs  audit.rs  banner.rs  category_taxonomy.rs  click_type.rs  companion.rs  companion_ad_redering_mode.rs  companion_type.rs  connection_type.rs  content.rs  content_context.rs  context.rs  creative_attribute.rs  creative_subtype.rs  data.rs  data_asset.rs  data_asset_format.rs  delivery_method.rs  device.rs  device_type.rs  display.rs  display_context_type.rs  display_format.rs  display_placement.rs  display_placement_type.rs  distribution_channel.rs  dooh.rs  dooh_placement_type.rs  dooh_venue_type.rs  event.rs  event_spec.rs  event_tracking_method.rs  (+44 more)
src/controllers/: ssp_controller.rs
src/errors/: error.rs
src/macros/: types.rs  types_strict.rs
src/models/: api_model.rs  openrtb.rs  openrtb_3_0.rs  serde_helper.rs
src/openrtb3/: adcom_audio.rs  adcom_audit.rs  adcom_context.rs  adcom_display.rs  adcom_media_ad.rs  auction_type.rs  bid.rs  bid_macro.rs  bool.rs  currency.rs  deal.rs  delivery_method.rs  domain_spec.rs  item.rs  language.rs  loss_reason_code.rs  metric.rs  non_bid_reason_code.rs  openrtb.rs  openrtb_request.rs  openrtb_response.rs  package.rs  seatbid.rs  source.rs  wseat_type.rs
(+1 files in other folders)
