[package]
name = "adserver-rs"
version = "0.1.0"
authors = ["hurou927 <god.be.with.ye.fs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde_json = "1.0"
serde = "1.0"
derive_more = "0.99.0"
serde_repr = "0.1"


